samples/_failures_safe/1761404756_ce232a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b573c62f.c: In function ‘main’:
./samples/SAFE/__tmp_b573c62f.c:138:12: error: missing terminating " character
  138 |     printf("Press Ctrl+D (Unix) or Ctrl+Z (Windows) to finish input\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b573c62f.c:138:5: error: expected expression at end of input
  138 |     printf("Press Ctrl+D (Unix) or Ctrl+Z (Windows) to finish input\n
      |     ^~~~~~
./samples/SAFE/__tmp_b573c62f.c:138:5: error: expected declaration or statement at end of input
